--- a/bootstrap-card-columns.html
+++ b/bootstrap-card-columns.html
@@ -257,11 +257,12 @@
       </div>
     </div>
   </div>
-  <button class="btn btn-success" style="width:40px;position: fixed; top: 90vh; right:5vw; border-radius:50%">+</button>
+  <button class="btn btn-success" style="width:40px;position: fixed; top: 90vh; right:5vw; border-radius:50%"
+    data-toggle="tooltip" data-placement="top" title="Add note">+</button>
   <!-- <span style="width:100px;position: fixed; top: 90vh; right:5vw">hey</span> -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/plugins/CSSPlugin.min.js"></script>
