--- a/bootstrap-card-columns.html
+++ b/bootstrap-card-columns.html
@@ -79,6 +79,12 @@
     .card-img-top {
       max-height: 200px;
     }
+
+    @media only screen and (max-width: 576px) {
+      .card-columns {
+        column-count: 1;
+      }
+    }
   </style>
 </head>
 
